# knowledge-agents

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-litellm.txt  requirements-seeder.txt  requirements.txt
.cursor/rules/: coding-rules.mdc  doc-rules.mdc  test-rules.mdc
config/: env.example  litellm_config.yaml  openai_api_key.txt.example  prometheus.yml  prometheus_queries.md  recording_rules.yml
config/litellm/: schema.prisma
data/: 01-init-db.sql
docs/: 00-implementation-changelog.md  00-requirements.txt  01-key-requirements.md  02-implementation-approaches.md  03-implementation-spec.md  04-repository-setup.md  05-test-implementation.md  06-implementation-results.md  DEBUGGING_EMPTY_RELEVANT_FILES.md  MODEL_ONBOARDING.md  TESTING_GUIDE.md  VERIFYING_RESPONSES_API.md  circular-dependency-restructure-plan.md  complete-example-proxy-client.md  dependency-injection-pattern.md  dependency-injection-refactor-plan.md  test-environment-improvements.md
prompts/: 01-understand-requirements.md  02-brainstorm-solutions.md  03-implement-spec.md  04-setup-repository.md  05-implement-tests.md  06-implement-service.md  07-review-implementation.md  08-setup-benchmark.md  09-testing-loop.md  10-principal-engineer-code-review.md
scripts/: call_litellm.sh  call_litellm_model.py  canary_monitor.py  check_data_exists.sh  check_service_health.sh  generate_litellm_api_key.sh  generate_simple_dashboard.py  makefile-helper.sh  seed_database.py  seed_vector_store.py
scripts/containers/litellm/: check_proxy_health.sh  healthcheck_litellm.sh  start_litellm_proxy.py
scripts/containers/test/: test_note_query_api.sh
src/: __init__.py
src/knowledge_agents/: dependencies.py  main.py  metrics.py  middleware.py  startup.py
src/knowledge_agents/agents/: __init__.py  note_query_agent.py
src/knowledge_agents/clients/: __init__.py  openai.py  proxy_client.py  vector_store.py
src/knowledge_agents/config/: __init__.py  api_config.py  logging_config.py  model_config.py  secrets_config.py
src/knowledge_agents/database/: sessions.py
src/knowledge_agents/guardrails/: __init__.py
src/knowledge_agents/prompts/: __init__.py  judge_note_answer_guardrail.py  note_query_agent.py  note_query_guardrail.py
src/knowledge_agents/routers/: auth.py  base.py  note_query.py
src/knowledge_agents/services/: __init__.py  note_query_service.py
src/knowledge_agents/tools/: __init__.py  noteplan_tools.py
src/knowledge_agents/types/: __init__.py  exceptions.py  note.py  request.py  response.py
src/knowledge_agents/utils/: __init__.py  agent_output_parser.py  agent_utils.py  exception_handlers.py  guardrail_metrics_util.py  guardrail_settings.py  metadata_utils.py  model_utils.py  usage_patch.py  (+3 more)
src/notes/: __init__.py  filter.py  generators.py  noteplan_structure.py  parser.py  traversal.py
tst/: conftest.py
tst/integration/: conftest.py
tst/unit/: conftest.py  test_config.py  test_dependencies.py  test_exception_handlers.py  test_middleware.py  test_openai_client_manager.py  test_proxy_client_manager.py  test_vector_store_client_manager.py
tst/utils/: test_assertion_utils.py
(+33 files in other folders)
